# agent-example

./: .env.example  .gitignore  pyproject.toml
backend/: catalog.template.yml
backend/app/: main.py  router.py
backend/app/base/ai_models/: __init__.py  factory.py  factory_embedding.py  factory_llm.py  schemas.py
backend/app/base/models/: __init__.py  mixin.py
backend/app/base/repos/: __init__.py  base.py
backend/app/base/repos/vector_store/: __init__.py  adaptor.py  base.py  deps.py
backend/app/base/services/: basic.py  vector_store.py
backend/app/base/usecase/: crud.py
backend/app/base/usecases/: crud.py
backend/app/core/: config.py
backend/app/core/vector_store/: __init__.py  client.py  deps.py  factory.py  interface.py  lifespan.py  registry.py
backend/app/core/vector_store/providers/: __init__.py  qdrant.py
backend/app/features/feedback/: models.py  repos.py  schemas.py  services.py
backend/app/features/feedback/api/: __init__.py  v1.py
backend/app/features/feedback/usecases/: crud.py
backend/app/features/mistake/: models.py  repos.py  schemas.py  services.py  vector_store.py
backend/app/features/session/: models.py  repos.py  schemas.py
backend/app/features/user_profile/: models.py  repos.py  schemas.py  services.py
backend/app/features/vocabulary/: models.py  repos.py  schemas.py  services.py
backend/migrations/: env.py
tests/: conftest.py
tests/e2e/: conftest.py
tests/fixtures/: __init__.py  clients.py
tests/fixtures/data/: __init__.py
tests/unit/test_base/: test_ai_model.py  test_models.py
(+12 files in other folders)
